--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="./blog_list.html">블로그</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./about_me.html">어바웃미잉</a>
+                <a class="nav-link" href="./about_me.html">어바웃 미잉</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -86,26 +86,29 @@
         <div class="row">
             <div class="col-md-8 col-lg-9">
                 <h1>Blog</h1>
-                 <!-- Blog post-->
-                <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                    <div class="card-body">
-                        <div class="small text-muted">January 1, 2022</div>
-                        <h2 class="card-title h4">Post Title</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                        <a class="btn btn-primary" href="#!">Read more →</a>
-                    </div>
-                </div>
+                {% for p in post_list %}
                 <!-- Blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                    <div class="card-body">
-                        <div class="small text-muted">January 1, 2022</div>
-                        <h2 class="card-title h4">Post Title</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                        <a class="btn btn-primary" href="#!">Read more →</a>
-                    </div>
+                    {% if p.head_image %}
+                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" >
+                    {% else %}
+                        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
+                    {% endif %}
+                        <div class="card-body">
+                            <div class="small text-muted">January 1, 2022</div>
+                            <h2 class="card-title h4">{{ p.title }}</h2>
+
+                            {% if p.hook_text %}
+                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                            {% endif %}
+                            <p class="card-text">{{ p.content | truncatewords:45 }} </p>
+                            <a class="btn btn-primary" href={{ p.get_absolute_url }}>Read more →</a>
+                        </div>
+                        <div class="card-footer text-muted"></div>
+                            Posted on {{ p.created_at }} by
+                            <a href ="#">작성자 명 쓸 위치(개발 예정이 랍니다)</a>
                 </div>
+                {% endfor %}
 
                 <!-- Pagination-->
                 <nav aria-label="Pagination">
