--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -27,10 +27,10 @@
                 <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./blog_list.html">블로그</a>
+                <a class="nav-link" href="./blog_list.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./about_me.html">어바웃 미잉</a>
+                <a class="nav-link" href="./about_me.html">About Me</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -84,31 +84,35 @@
 
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9" id="main-area">
                 <h1>Blog</h1>
-                {% for p in post_list %}
-                <!-- Blog post-->
-                <div class="card mb-4">
-                    {% if p.head_image %}
-                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" >
-                    {% else %}
-                        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                    {% endif %}
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2022</div>
-                            <h2 class="card-title h4">{{ p.title }}</h2>
-
-                            {% if p.hook_text %}
-                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                {% if post_list.exists %}
+                    {% for p in post_list %}
+                    <!-- Blog post-->
+                        <div class="card mb-4">
+                            {% if p.head_image %}
+                                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" >
+                            {% else %}
+                                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                             {% endif %}
-                            <p class="card-text">{{ p.content | truncatewords:45 }} </p>
-                            <a class="btn btn-primary" href={{ p.get_absolute_url }}>Read more →</a>
+                                <div class="card-body">
+                                    <div class="small text-muted">January 1, 2022</div>
+                                    <h2 class="card-title h4">{{ p.title }}</h2>
+
+                                    {% if p.hook_text %}
+                                        <h5 class="text-muted">{{ p.hook_text }}</h5>
+                                    {% endif %}
+                                    <p class="card-text">{{ p.content | truncatewords:45 }} </p>
+                                    <a class="btn btn-primary" href={{ p.get_absolute_url }}>Read more →</a>
+                                </div>
+                                <div class="card-footer text-muted"></div>
+                                    Posted on {{ p.created_at }} by
+                                    <a href ="#">작성자 명 쓸 위치(개발 예정이 랍니다)</a>
                         </div>
-                        <div class="card-footer text-muted"></div>
-                            Posted on {{ p.created_at }} by
-                            <a href ="#">작성자 명 쓸 위치(개발 예정이 랍니다)</a>
-                </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <h3>아직 게시물이 없습니다.</h3>
+                {% endif %}
 
                 <!-- Pagination-->
                 <nav aria-label="Pagination">
